--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#About">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#Projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#Contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
     <div class="container-fluid">
         <div class="row jumbotron text-center">
             <div class="col-12">
-                <h3>About</h3>
+                <h3 id="About">About</h3>
             </div>
         </div>
     </div>
@@ -98,7 +98,7 @@
     <div class="container-fluid padding">
         <div class="row welcome text-center">
             <div class="col-12">
-                <h1 class="display-4">Projects</h1>
+                <h1 class="display-4" id="Projects">Projects</h1>
             </div>
             <hr/>
             <div class="col-12">
@@ -167,7 +167,7 @@
         <div class="container-fluid padding">
             <div class="row text-center">
                 <div class="col-12">
-                    <h3>Contact</h3>
+                    <h3 id="Contact">Contact</h3>
                     <hr class="light">
                     <p>317-665-0852</p>
                     <p>lcostilla287@gmail.com</p>
